tests/macros/confirm/mask.stderr
error: option `mask` does not exist for kind `confirm`
 --> $DIR/mask.rs:2:47
  |
2 |     let q = inquisition::questions![Confirm { mask: todo!() }];
  |                                               ^^^^
